<resources>
    <string name="app_name">MyApplicationETC</string>

    <!-- activity_main -->
    <string name="mainMenu">Главное Меню</string>
    <string name="taskControl">Управление задачами</string>
    <string name="taskName">Название задачи</string>
    <string name="taskDescription">Описание задачи</string>
    <string name="addTask">Добавить</string>
    <string name="refreshTask">Обновить</string>
    <string name="deleteTask">Удалить выбранную задачу</string>

    <!-- activity_profile -->
    <string name="profile">Ваш профиль</string>
    <string name="backMenu">Назад в меню</string>

    <!-- activity_calc -->
    <string name="calcText">Вычислитель</string>
    <string name="calcInputText1">Введите первое число</string>
    <string name="calcInputText2">Введите второе число</string>
    <string name="calcAddText">Сложить</string>
    <string name="calcResultText">Результат: ?</string>

    <!-- activity_details -->
    <string name="ad_taskDetails">📝 Детали задачи</string>
    <string name="ad_taskName">Название задачи</string>
    <string name="ad_taskDescription">Описание</string>
    <string name="ad_taskID">ID: #</string>
    <string name="ad_taskEdit">✏️ Редактировать</string>
    <string name="ad_taskDelete">🗑️ Удалить</string>

    <!-- activity_gallery -->
    <string name="ag_picCatlog">Каталог картинок</string>

    <!-- item_gallery -->
    <string name="ig_title">Каталог картинок</string>
    <string name="ig_description">Каталог картинок</string>

    <!-- activity_media -->
    <string name="am_content">Аудио и Видео</string>

    <!-- fragment_home -->
    <string name="fh_taskName">Название задачи</string>
    <string name="fh_taskDescription">Описание задачи</string>
    <string name="fh_taskAdd">Добавить задачу</string>
    <string name="fh_updateList">Обновить список</string>

    <!-- fragment_settings -->
    <string name="fs_theme">Тёмная тема</string>
    <string name="fs_textSize">Размер шрифта (10–30)</string>

    <!-- bottom_nav_menu -->
    <string name="bnm_main">Главная</string>
    <string name="bnm_gallery">Галерея</string>
    <string name="bnm_media">Медиа</string>
    <string name="bnm_settings">Настройки</string>

    <!-- <string name=""> </string> -->
</resources>