<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/mainMenu"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"/>

        <ListView
            android:id="@+id/lvScreens"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="32dp"/>

        <TextView
            android:text="@string/taskControl"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/etTitle"
            android:hint="@string/taskName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/etDesc"
            android:hint="@string/taskDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnAdd"
                android:text="@string/addTask"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/grey"
                android:layout_marginEnd="8dp"/>

            <Button
                android:id="@+id/btnRefresh"
                android:text="@string/refreshTask"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/grey"
                android:layout_weight="1"/>

            </LinearLayout>

            <ListView
                android:id="@+id/listViewTasks"
                android:layout_width="match_parent"
                android:layout_height="300dp"/>

            <Button
                android:id="@+id/btnDeleteSelected"
                android:text="@string/deleteTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FF5722"/>

        </LinearLayout>
    </ScrollView>